--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,8 @@ dependencies {
 // https://mvnrepository.com/artifact/org.testcontainers/postgresql
     testImplementation 'org.testcontainers:postgresql:1.16.0'
 
+    testImplementation 'org.assertj:assertj-core:3.21.0'
+
 }
 
 test {
